ARM deployments/da-dev-resource-fw-bk.template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "workspaceName": {
      "type": "string",
      "metadata": {
        "description": "The name of the Azure Databricks workspace to create."
      }
    },
    "tags": {
      "type": "object",
      "defaultValue": {}
    },
    "pricingTier": {
      "defaultValue": "premium",
      "allowedValues": [ "trial", "standard", "premium" ],
      "type": "string",
      "metadata": {
        "description": "The pricing tier of workspace."
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "vnetCidr": {
      "defaultValue": "10.204.5.0/24",
      "type": "string",
      "metadata": {
        "description": "Cidr range for the vnet."
      }
    },
    "privateSubnetCidr": {
      "defaultValue": "10.204.5.0/25",
      "type": "string",
      "metadata": {
        "description": "Cidr range for the private subnet."
      }
    },
    "publicSubnetCidr": {
      "defaultValue": "10.204.5.128/25",
      "type": "string",
      "metadata": {
        "description": "Cidr range for the public subnet.."
      }
    }
  },
  "variables": {
    "azureRegionToControlPlaneIp": {
      "australiacentral": "13.70.105.50/32",
      "australiacentral2": "13.70.105.50/32",
      "australiaeast": "13.70.105.50/32",
      "australiasoutheast": "13.70.105.50/32",
      "canadacentral": "40.85.223.25/32",
      "canadaeast": "40.85.223.25/32",
      "centralindia": "104.211.101.14/32",
      "centralus": "23.101.152.95/32",
      "eastasia": "52.187.0.85/32",
      "eastus": "23.101.152.95/32",
      "eastus2": "23.101.152.95/32",
      "eastus2euap": "23.101.152.95/32",
      "japaneast": "13.78.19.235/32",
      "japanwest": "13.78.19.235/32",
      "northcentralus": "23.101.152.95/32",
      "northeurope": "23.100.0.135/32",
      "southcentralus": "40.83.178.242/32",
      "southeastasia": "52.187.0.85/32",
      "southindia": "104.211.101.14/32",
      "uksouth": "51.140.203.27/32",
      "ukwest": "51.140.203.27/32",
      "westcentralus": "40.83.178.242/32",
      "westeurope": "23.100.0.135/32",
      "westindia": "104.211.101.14/32",
      "westus": "40.83.178.242/32",
      "westus2": "40.83.178.242/32"
    },
    "controlPlaneIp": "[variables('azureRegionToControlPlaneIp')[parameters('location')]]",
    "azureRegionToWebappIp": {
      "australiacentral": "13.75.218.172/32",
      "australiacentral2": "13.75.218.172/32",
      "australiaeast": "13.75.218.172/32",
      "australiasoutheast": "13.75.218.172/32",
      "canadacentral": "13.71.184.74/32",
      "canadaeast": "13.71.184.74/32",
      "centralindia": "104.211.89.81/32",
      "centralus": "40.70.58.221/32",
      "eastasia": "52.187.145.107/32",
      "eastus": "40.70.58.221/32",
      "eastus2": "40.70.58.221/32",
      "eastus2euap": "40.70.58.221/32",
      "japaneast": "52.246.160.72/32",
      "japanwest": "52.246.160.72/32",
      "northcentralus": "40.70.58.221/32",
      "northeurope": "52.232.19.246/32",
      "southcentralus": "40.118.174.12/32",
      "southeastasia": "52.187.145.107/32",
      "southindia": "104.211.89.81/32",
      "uksouth": "51.140.204.4/32",
      "ukwest": "51.140.204.4/32",
      "westcentralus": "40.118.174.12/32",
      "westeurope": "52.232.19.246/32",
      "westindia": "104.211.89.81/32",
      "westus": "40.118.174.12/32",
      "westus2": "40.118.174.12/32"
    },
    "webappIp": "[variables('azureRegionToWebappIp')[parameters('location')]]",
    "nsgName": "[concat(parameters('workspaceName'),'-nsg')]",
    "nsgId": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]",
    "vnetName": "[concat(parameters('workspaceName'),'-vnet')]",
    "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
    "privateSubnetName": "[concat(variables('vnetName'),'-private-sn')]",
    "publicSubnetName": "[concat(variables('vnetName'),'-public-sn')]",
    "managedResourceGroupId": "[concat(subscription().id, '/resourceGroups/', variables('managedResourceGroupName'))]",
    "managedResourceGroupName": "[concat('databricks-rg-', parameters('workspaceName'), '-', uniqueString(parameters('workspaceName'), resourceGroup().id))]"
  },
  "resources": [
    {
      "apiVersion": "2018-02-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "location": "[parameters('location')]",
      "name": "[variables('nsgName')]",
      "tags": "[parameters('tags')]",
      "properties": {
        "securityRules": [
          {
            "name": "databricks-worker-to-worker-inbound",
            "properties": {
              "access": "Allow",
              "description": "Required for worker nodes communication within a cluster.",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "*",
              "direction": "Inbound",
              "priority": 200,
              "protocol": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourcePortRange": "*"
            }
          },
          {
            "name": "databricks-control-plane-ssh",
            "properties": {
              "access": "Allow",
              "description": "Required for Databricks control plane management of worker nodes.",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "22",
              "direction": "Inbound",
              "priority": 100,
              "protocol": "*",
              "sourceAddressPrefix": "[variables('controlPlaneIp')]",
              "sourcePortRange": "*"
            }
          },
          {
            "name": "databricks-control-plane-worker-proxy",
            "properties": {
              "access": "Allow",
              "description": "Required for Databricks control plane communication with worker nodes.",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "5557",
              "direction": "Inbound",
              "priority": 110,
              "protocol": "*",
              "sourceAddressPrefix": "[variables('controlPlaneIp')]",
              "sourcePortRange": "*"
            }
          },
          {
            "name": "databricks-worker-to-webapp",
            "properties": {
              "access": "Allow",
              "description": "Required for workers communication with Databricks Webapp.",
              "destinationAddressPrefix": "[variables('webappIp')]",
              "destinationPortRange": "*",
              "direction": "Outbound",
              "priority": 100,
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*"
            }
          },
          {
            "name": "databricks-worker-to-sql",
            "properties": {
              "access": "Allow",
              "description": "Required for workers communication with Azure SQL services.",
              "destinationAddressPrefix": "Sql",
              "destinationPortRange": "*",
              "direction": "Outbound",
              "priority": 110,
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*"
            }
          },
          {
            "name": "databricks-worker-to-storage",
            "properties": {
              "access": "Allow",
              "description": "Required for workers communication with Azure Storage services.",
              "destinationAddressPrefix": "Storage",
              "destinationPortRange": "*",
              "direction": "Outbound",
              "priority": 120,
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*"
            }
          },
          {
            "name": "databricks-worker-to-worker-outbound",
            "properties": {
              "access": "Allow",
              "description": "Required for worker nodes communication within a cluster.",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "*",
              "direction": "Outbound",
              "priority": 130,
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*"
            }
          },
          {
            "name": "databricks-worker-to-any",
            "properties": {
              "access": "Allow",
              "description": "Required for worker nodes communication with any destination.",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "*",
              "direction": "Outbound",
              "priority": 140,
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2019-06-01",
      "type": "Microsoft.Network/virtualNetworks",
      "location": "[parameters('location')]",
      "tags": "[parameters('tags')]",
      "name": "[variables('vnetName')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [ "[parameters('vnetCidr')]" ]
        },
        "subnets": [
          {
            "name": "[variables('publicSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('publicSubnetCidr')]",
              "networkSecurityGroup": {
                "id": "[variables('nsgId')]"
              },
              "delegations": [
                {
                  "name": "databricks-delegation-public-sn",
                  "properties": {
                    "serviceName": "Microsoft.Databricks/workspaces"
                  }
                }
              ]
            }
          },
          {
            "name": "[variables('privateSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('privateSubnetCidr')]",
              "networkSecurityGroup": {
                "id": "[variables('nsgId')]"
              },
              "delegations": [
                {
                  "name": "databricks-delegation-private-sn",
                  "properties": {
                    "serviceName": "Microsoft.Databricks/workspaces"
                  }
                }
              ]
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-04-01",
      "type": "Microsoft.Databricks/workspaces",
      "location": "[parameters('location')]",
      "name": "[parameters('workspaceName')]",
      "tags": "[parameters('tags')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('vnetName'))]"
      ],
      "sku": {
        "name": "[parameters('pricingTier')]"
      },
      "comments": "The resource group specified will be locked after deployment.",
      "properties": {
        "ManagedResourceGroupId": "[variables('managedResourceGroupId')]",
        "parameters": {
          "customVirtualNetworkId": {
            "value": "[variables('vnetId')]"
          },
          "customPublicSubnetName": {
            "value": "[variables('publicSubnetName')]"
          },
          "customPrivateSubnetName": {
            "value": "[variables('privateSubnetName')]"
          }
        }
      }
    }
  ]
}
